@@ -1,3 +1,11 @@
+2003-07-08  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* testsuite/ext/pod_char_traits.cc: New.
+	* include/ext/pod_char_traits.h: New.
+	* include/Makefile.am (ext_headers): Add pod_char_traits.h.
+	* include/Makefile.in: Regenerate.
+	* docs/html/21_strings/howto.html: Update.
+	
 2003-07-08  Gawain Bolton  <gp.bolton@computer.org>
 
 	* testsuite/performance/list_create_fill_sort.cc: New.
